EDOSPNC-1071 Fix alignement spécialité dans carte pnc

--- a/src/app/shared/components/pnc-card/pnc-card.component.scss
+++ b/src/app/shared/components/pnc-card/pnc-card.component.scss
@@ -38,17 +38,15 @@ pnc-card {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    justify-content: space-around;
+                    justify-content: center;
 
                     span {
-                        display: block;
                         text-overflow: ellipsis;
                         white-space: nowrap;
                         overflow: hidden;
                     }
 
                     .speciality {
-                        flex: 1;
                         font-size: 1.5em;
                     }
 
@@ -107,37 +105,27 @@ pnc-card {
                 display: flex;
                 justify-content: flex-end;
                 align-items: center;
+                padding-top: 10px;
 
                 & > span {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     margin-left: 10px;
+                    border-radius: 100%;
+                    height: 35px;
+                    width: 35px;
+                    border: 3px solid;
                 }
 
                 .prioritized {
                     color: color($colors, secondary);
-
-                    &:after {
-                        content: ' ';
-                        position: absolute;
-                        margin-left: -37px;
-                        border-radius: 100%;
-                        border: 3px solid color($colors, secondary);
-                        height: 30px;
-                        width: 30px;
-                    }
+                    border-color: color($colors, secondary);
                 }
 
                 .at-least-one-priority {
                     color: color($colors, primary);
-
-                    &:after {
-                        content: ' ';
-                        position: absolute;
-                        margin-left: -37px;
-                        border-radius: 100%;
-                        border: 3px solid color($colors, primary);
-                        height: 30px;
-                        width: 30px;
-                    }
+                    border-color: color($colors, primary);
                 }
             }
 
